# EngineX

./: .clangd  .gitignore  CMakeLists.txt  Game  main.cpp
.github/workflows/: SetupSDL.yml  build.yml  cmake-multi-platform.yml
Core/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h
GameObjects/: Player.cpp  Player.h  Wall.cpp
Globals/: Config.h  DeltaTime.cpp  DeltaTime.h  GameMap.h
Level/: Level.cpp  Level.h  LevelFactory.cpp  LevelFactory.h  LevelManager.cpp  LevelManager.h  TempTestLevel.h
Rendering/: GameWindow.cpp  RaycastRenderer.cpp  RaycastRenderer.h  RenderInstanceManager.cpp  RenderInstanceManager.h  Renderer.cpp  Renderer.h
SDL2/docs/: README-gesture.md  README-touch.md
SDL2/x86_64-w64-mingw32/include/SDL2/: SDL_assert.h  SDL_gamecontroller.h  SDL_hints.h  SDL_joystick.h  SDL_mouse.h  SDL_render.h  SDL_sensor.h  SDL_shape.h  SDL_stdinc.h  SDL_video.h
Source/: main.cpp
Source/Core/: Game.h
Source/GameObjects/: BaseGameObject.h  ExampleGameObject.cpp  Player.h
Source/Level/: LevelManager.cpp  LevelManager.h
Source/private/: AssetManager.cpp  BaseGameObject.cpp  Camera.cpp  Component.cpp  DeltaTime.cpp  ExampleGameObject.cpp  Game.cpp  GameEngine.cpp  GameWindow.cpp  HealthComponent.cpp  InputManager.cpp  Level.cpp  LevelFactory.cpp  LevelManager.cpp  Player.cpp  RaycastRenderer.cpp  RenderInstanceManager.cpp  Renderer.cpp  TextureManager.cpp  Vector2.cpp
Source/public/: BaseGameObject.h  Camera.h  Config.h  ExampleGameObject.h  Game.h  GameWindow.h  HealthComponent.h  InputManager.h  Level.h  LevelFactory.h  LevelManager.h  Player.h  RaycastRenderer.h  RenderInstanceManager.h  Renderer.h  TextureManager.h  Vector2.h  Wall.h
src/: main.cpp
src/Engine/Core/: AssetManager.h  Config.h  DeltaTime.h  GameEngine.cpp  GameEngine.h  InputManager.cpp  TextureManager.cpp  TextureManager.h
src/Engine/Core/Math/: Vector2.h
src/Engine/GameObject/: BaseGameObject.cpp  BaseGameObject.h  Component.cpp  Component.h
src/Engine/Level/: Level.cpp  Level.h  LevelFactory.cpp  LevelFactory.h  LevelManager.h
src/Engine/Rendering/: Camera.cpp  Camera.h  GameWindow.cpp  GameWindow.h  RaycastRenderer.cpp  RaycastRenderer.h  RenderInstanceManager.cpp  RenderInstanceManager.h  Renderer.h
src/Game/Components/: HealthComponent.cpp  HealthComponent.h
src/Game/GameObject/: ExampleGameObject.cpp  ExampleGameObject.h  Player.cpp  Player.h  Wall.cpp  Wall.h
